# courier-delivery-solver

./: .gitignore  README.md  bestsolver.py  pyproject.toml
GUI/: run_gui.py
example/tasks/courier_bundle_assignment/: run_baseline.py  run_eoh.py
llm4ad/: gui.py
llm4ad/method/: __init__.py
llm4ad/method/eoh/: __init__.py  population.py  profiler.py
llm4ad/task/: __init__.py
llm4ad/task/optimization/: __init__.py
llm4ad/task/optimization/courier_bundle_assignment/: __init__.py  evaluation.py  official_large_seed301.txt  paras.yaml  template.py
llm4ad/tools/llm/: __init__.py  llm_api_https.py
llm4ad/tools/profiler/: __init__.py  profile.py
